feat: criacao dos dockerfile

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "jwt-auth-react",
   "version": "1.0.0",
   "scripts": {
+    "start": "vite", 
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
