feat: login com jwt na api

--- a/codefreelaapi/pom.xml
+++ b/codefreelaapi/pom.xml
@@ -44,6 +44,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.12.6</version> <!-- Try a stable version like this -->
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
