--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,14 @@
   "name": "jwt-auth-react",
   "version": "1.0.0",
   "scripts": {
-    "start": "vite", 
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
