--- a/codefreelaapi/src/main/resources/application.yml
+++ b/codefreelaapi/src/main/resources/application.yml
@@ -15,13 +15,13 @@ spring:
       ddl-auto: update
     properties:
       hibernate.format_sql: true
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: ${GOOGLE_CLIENT_ID}
-            client-secret: ${GOOGLE_CLIENT_SECRET}
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          google:
+#            client-id: ${GOOGLE_CLIENT_ID}
+#            client-secret: ${GOOGLE_CLIENT_SECRET}
 
 
 management:
