feat: implementacao do gitea

--- a/codefreelaapi/src/main/resources/application.yml
+++ b/codefreelaapi/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       enabled: ALWAYS
 
   datasource:
-    url: jdbc:postgresql://${URL_BD}/codefreeladb
+    url: jdbc:postgresql://${URL_BD}/${DATABASE}
     username: ${USERNAME_BD}
     password: ${PASSWORD_BD}
     driver-class-name: org.postgresql.Driver
@@ -30,6 +30,14 @@ spring:
           starttls:
             enable: true
 
+gitea:
+  datasource:
+    url: jdbc:postgresql://localhost:5434/postgres
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+
+
 management:
   server:
     port: 9090
@@ -37,6 +45,7 @@ management:
     web:
       exposure:
         include: '*'
+
 
 springdoc:
   override-with-generic-response: false
