--- a/codefreelaapi/src/main/resources/application.yml
+++ b/codefreelaapi/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     hibernate:
       ddl-auto: update
     properties:
-      hibernate.format_sql: true
+      hibernate.format_sql: false
 
   mail:
     host: smtp.gmail.com
